{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 164,
  "lineage": "5cfd1a91-f332-85dd-33cf-4fcccbd2d00c",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:security-group/sg-08698f6dce627746d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-08698f6dce627746d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0606ebfcd91800fa0"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-eks-argocd-cluster-2025032504380503090000000b",
            "name_prefix": "terraform-eks-argocd-cluster-",
            "owner_id": "727646503346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-argocd-cluster",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-cluster",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:security-group/sg-0606ebfcd91800fa0",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0606ebfcd91800fa0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08698f6dce627746d"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08698f6dce627746d"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08698f6dce627746d"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08698f6dce627746d"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08698f6dce627746d"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08698f6dce627746d"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "elbv2.k8s.aws/targetGroupBinding=shared",
                "from_port": 30080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce6a0a167d395f3b"
                ],
                "self": false,
                "to_port": 30080
              }
            ],
            "name": "terraform-eks-argocd-node-2025032504380508060000000c",
            "name_prefix": "terraform-eks-argocd-node-",
            "owner_id": "727646503346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-argocd-node",
              "github_org": "SKF-Internal",
              "kubernetes.io/cluster/terraform-eks-argocd": "owned",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-node",
              "github_org": "SKF-Internal",
              "kubernetes.io/cluster/terraform-eks-argocd": "owned",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-4267409992",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08698f6dce627746d",
            "security_group_rule_id": "sgr-0a1bc35945aa4e2f6",
            "self": false,
            "source_security_group_id": "sg-0606ebfcd91800fa0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1184450483",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0606ebfcd91800fa0",
            "security_group_rule_id": "sgr-060e092476ffc4e38",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-32500076",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0606ebfcd91800fa0",
            "security_group_rule_id": "sgr-0881a9c6bed553d62",
            "self": false,
            "source_security_group_id": "sg-08698f6dce627746d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2403836509",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0606ebfcd91800fa0",
            "security_group_rule_id": "sgr-008a403f8fc30a728",
            "self": false,
            "source_security_group_id": "sg-08698f6dce627746d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1174783435",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0606ebfcd91800fa0",
            "security_group_rule_id": "sgr-0aa9a16d2cfe64860",
            "self": false,
            "source_security_group_id": "sg-08698f6dce627746d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1431960042",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0606ebfcd91800fa0",
            "security_group_rule_id": "sgr-0c774874cbd34ff50",
            "self": false,
            "source_security_group_id": "sg-08698f6dce627746d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-838388257",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0606ebfcd91800fa0",
            "security_group_rule_id": "sgr-08a4dafa51779952d",
            "self": false,
            "source_security_group_id": "sg-08698f6dce627746d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-326264017",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0606ebfcd91800fa0",
            "security_group_rule_id": "sgr-015aaee87fbe41725",
            "self": false,
            "source_security_group_id": "sg-08698f6dce627746d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3861731668",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0606ebfcd91800fa0",
            "security_group_rule_id": "sgr-0d2f8d47e6e630012",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2931919798",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0606ebfcd91800fa0",
            "security_group_rule_id": "sgr-0affe4a7527bfa050",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-178137177",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0606ebfcd91800fa0",
            "security_group_rule_id": "sgr-00733ef24ba965404",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:network-acl/acl-0c704689c825eae0a",
            "default_network_acl_id": "acl-0c704689c825eae0a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0c704689c825eae0a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "727646503346",
            "subnet_ids": [
              "subnet-00b68b866f7170398",
              "subnet-017deb70af6954eff",
              "subnet-05d8072b270e21ebe",
              "subnet-08394f329b0c33355",
              "subnet-0888710da4623a343",
              "subnet-0f783fea0387538be"
            ],
            "tags": {
              "Name": "terraform-eks-argocd-default",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-default",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:route-table/rtb-035e16f2cb0b4084c",
            "default_route_table_id": "rtb-035e16f2cb0b4084c",
            "id": "rtb-035e16f2cb0b4084c",
            "owner_id": "727646503346",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "terraform-eks-argocd-default",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-default",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:security-group/sg-05dce174fd88ddf10",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-05dce174fd88ddf10",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "727646503346",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-argocd-default",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-default",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b37a83c536a4e647",
            "arn": "arn:aws:ec2:ap-south-1:727646503346:elastic-ip/eipalloc-0b37a83c536a4e647",
            "association_id": "eipassoc-083499bb9b64de790",
            "domain": "vpc",
            "id": "eipalloc-0b37a83c536a4e647",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0203a7ccc11b810a4",
            "private_dns": "ip-10-23-48-95.ap-south-1.compute.internal",
            "private_ip": "10.23.48.95",
            "public_dns": "ec2-13-127-115-23.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.115.23",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-eks-argocd-ap-south-1a",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-ap-south-1a",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:internet-gateway/igw-02139dfd45510d4c8",
            "id": "igw-02139dfd45510d4c8",
            "owner_id": "727646503346",
            "tags": {
              "Name": "terraform-eks-argocd",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b37a83c536a4e647",
            "association_id": "eipassoc-083499bb9b64de790",
            "connectivity_type": "public",
            "id": "nat-003962d6469354636",
            "network_interface_id": "eni-0203a7ccc11b810a4",
            "private_ip": "10.23.48.95",
            "public_ip": "13.127.115.23",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00b68b866f7170398",
            "tags": {
              "Name": "terraform-eks-argocd-ap-south-1a",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-ap-south-1a",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04b6520eeebace4041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-003962d6469354636",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04b6520eeebace404",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02139dfd45510d4c8",
            "id": "r-rtb-0a58cf951b2b005861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a58cf951b2b00586",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:route-table/rtb-04b6520eeebace404",
            "id": "rtb-04b6520eeebace404",
            "owner_id": "727646503346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-003962d6469354636",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-eks-argocd-private",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-private",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:route-table/rtb-0a58cf951b2b00586",
            "id": "rtb-0a58cf951b2b00586",
            "owner_id": "727646503346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02139dfd45510d4c8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-eks-argocd-public",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-public",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee20517b56c71e2e",
            "route_table_id": "rtb-04b6520eeebace404",
            "subnet_id": "subnet-0f783fea0387538be"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e376324625bc90d8",
            "route_table_id": "rtb-04b6520eeebace404",
            "subnet_id": "subnet-05d8072b270e21ebe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c1d21660c6d0a3d",
            "route_table_id": "rtb-04b6520eeebace404",
            "subnet_id": "subnet-017deb70af6954eff"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095f67f0f527f7cb8",
            "route_table_id": "rtb-0a58cf951b2b00586",
            "subnet_id": "subnet-00b68b866f7170398"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e8e59dc6311a2d6",
            "route_table_id": "rtb-0a58cf951b2b00586",
            "subnet_id": "subnet-08394f329b0c33355"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050d160f396447dbe",
            "route_table_id": "rtb-0a58cf951b2b00586",
            "subnet_id": "subnet-0888710da4623a343"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:subnet/subnet-0f783fea0387538be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.23.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f783fea0387538be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646503346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-argocd-private-ap-south-1a",
              "github_org": "SKF-Internal",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-private-ap-south-1a",
              "github_org": "SKF-Internal",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:subnet/subnet-05d8072b270e21ebe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.23.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d8072b270e21ebe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646503346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-argocd-private-ap-south-1b",
              "github_org": "SKF-Internal",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-private-ap-south-1b",
              "github_org": "SKF-Internal",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:subnet/subnet-017deb70af6954eff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.23.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017deb70af6954eff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646503346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-argocd-private-ap-south-1c",
              "github_org": "SKF-Internal",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-private-ap-south-1c",
              "github_org": "SKF-Internal",
              "kubernetes.io/role/internal-elb": "1",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:subnet/subnet-00b68b866f7170398",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.23.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b68b866f7170398",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646503346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-argocd-public-ap-south-1a",
              "github_org": "SKF-Internal",
              "kubernetes.io/role/elb": "1",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-public-ap-south-1a",
              "github_org": "SKF-Internal",
              "kubernetes.io/role/elb": "1",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:subnet/subnet-08394f329b0c33355",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.23.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08394f329b0c33355",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646503346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-argocd-public-ap-south-1b",
              "github_org": "SKF-Internal",
              "kubernetes.io/role/elb": "1",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-public-ap-south-1b",
              "github_org": "SKF-Internal",
              "kubernetes.io/role/elb": "1",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:subnet/subnet-0888710da4623a343",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.23.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0888710da4623a343",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "727646503346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform-eks-argocd-public-ap-south-1c",
              "github_org": "SKF-Internal",
              "kubernetes.io/role/elb": "1",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd-public-ap-south-1c",
              "github_org": "SKF-Internal",
              "kubernetes.io/role/elb": "1",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "vpc_id": "vpc-0f9df6d6f784ac7b7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:727646503346:vpc/vpc-0f9df6d6f784ac7b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.23.0.0/16",
            "default_network_acl_id": "acl-0c704689c825eae0a",
            "default_route_table_id": "rtb-035e16f2cb0b4084c",
            "default_security_group_id": "sg-05dce174fd88ddf10",
            "dhcp_options_id": "dopt-022e219a868cc123e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f9df6d6f784ac7b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035e16f2cb0b4084c",
            "owner_id": "727646503346",
            "tags": {
              "Name": "terraform-eks-argocd",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            },
            "tags_all": {
              "Name": "terraform-eks-argocd",
              "github_org": "SKF-Internal",
              "owner": "joydeep",
              "repository": "Terraform-EKS-ArgoCD"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}